fixing dfs, fetchquery optimization and addresing pr comments